--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Welcome to Not Quite Reddit!</h1>
+<h1>Not Quite Reddit!</h1>
 
 
 <h3>Subreddits</h3>
 {% for sub in all_sub %}
-<li><a href="#">{{ sub }}</a></li>
+<a href="#">{{ sub }}</a> <br>
 Total Subreddit Post Count: {{ sub.current_count }} <br>
 Total Posts Today: {{ sub.today_count }} <br>
-Average Posts/Day: {{ sub.daily_avg }}
+Average Posts/Day: {{ sub.daily_avg }} <br>
+<br>
 {% endfor %}
 
-
+<h3>Posts</h3>
+{% for posts in all_post %}
+{{ posts }} <br>
+{{ posts.is_recent }} <br>
+<br>
+{% endfor %}
 
 {% endblock %}
