--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
   </head>
   <body>
       <div class="container">
+        <div class="anchor_tags">
+          <a href="{% url 'subreddit_view' %}">Subreddits</a> <br>
+          <a href="{% url 'subreddit_create_view' %}">Create Subreddits</a>
+        </div>
         {% block content %}
         {% endblock %}
       </div>
