--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
+<a href="{% url 'comment_create_view' object.id %}">Add Comment</a> <br>
+<a href="{% url 'post_update_view' object.id %}">Update Post</a>
+
 <h1>{{ object }}</h1>
 <h3>{{ object.post_description }}</h3>
-Is this post recent(within 24 hrs)? {{ post.is_recent }}<br> <br>
+  {{ object.url_page }}<br>
+Is this post recent(within 24 hrs)? {{ object.is_recent }}<br>
+Is post Hot? {{ object.is_hot }} <br> <br>
 {% for comment in object.get_comment %}
 <li>
   {{ comment }}<br>
-  Created {{ comment.comment_created|timesince }} ago.<br> <br>
+  <a href="{% url 'comment_update_view' comment.id %}">Update Comment</a>
+  Created {{ comment.comment_created|timesince }} ago.
+  Created By: {{ comment.comment_user }} <br> <br>
 </li>
 {% endfor %}
 {% endblock %}
