--- a/templates/app/subreddit_list.html
+++ b/templates/app/subreddit_list.html
@@ -2,11 +2,18 @@
 
 {% block content %}
 <a href="{% url 'subreddit_create_view' %}">Create Subreddits</a>
+<h1>Welcome {{request.user }}</h1>
+<br>
 <h1>Subreddits</h1>
 {% for sub in object_list %}
-<h4><a href="{% url 'subreddit_detail_view' sub.id %}">{{ sub }}</a></h4>
-<h5>{{ sub.description }}</h5>
-Total Subreddit Post Count: {{ sub.current_count }}<br>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <h4><a href="{% url 'subreddit_detail_view' sub.id %}">{{ sub }}</a></h4>
+    <h5>{{ sub.description }}</h5>
+    Total Subreddit Post Count: {{ sub.current_count }}<br>
+  </div>
+</div>
+
 <br>
 {% endfor %}
 
