--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,25 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" media="screen" title="no title">
 
+    <style media="screen">
+      body {
+        background-color: #48D1CC;
+      }
+
+      a:hover {
+        background-color: white;
+        color: black;
+      }
+
+      h1 {
+        position: relative;
+        text-decoration: underline;
+      }
+
+      .panel-body {
+        padding: 1em;
+      }
+    </style>
   </head>
   <body>
       <div class="container">
