--- a/templates/app/subreddit_list.html
+++ b/templates/app/subreddit_list.html
@@ -8,9 +8,8 @@
 {% for sub in object_list %}
 <div class="panel panel-default">
   <div class="panel-body">
-    <h4><a href="{% url 'subreddit_detail_view' sub.id %}">{{ sub }}</a></h4>
+    <h4><a href="{% url 'subreddit_detail_view' sub.id %}">{{ sub }} <span class="badge">{{ sub.current_count }}</span></a></h4>
     <h5>{{ sub.description }}</h5>
-    Total Subreddit Post Count: {{ sub.current_count }}<br>
   </div>
 </div>
 
