--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -1,23 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
+<a href="{% url 'post_update_view' object.id %}">Update Post</a><br>
 <a href="{% url 'comment_create_view' object.id %}">Add Comment</a> <br>
-<a href="{% url 'post_update_view' object.id %}">Update Post</a>
 
 <h1>{{ object }}</h1>
 <h3>{{ object.post_description }}</h3>
-  {{ object.url_page }}<br>
+  URL: {{ object.url_page }}<br>
   {{ object.is_recent }}<br>
   {{ object.is_hot }} <br> <br>
+
 {% for comment in object.get_comment %}
-<div class="panel panel-default">
-  <div class="panel-body">
+  <div class="well well-sm">
     <li>
       {{ comment }}<br>
-      <a href="{% url 'comment_update_view' comment.id %}">Update Comment</a>
+      <a href="{% url 'comment_update_view' comment.id %}">Update Comment</a> <br>
       Created {{ comment.comment_created|timesince }} ago.
       Created By: {{ comment.comment_user }} <br> <br>
     </li>
   </div>
-</div>
 {% endfor %}
 {% endblock %}
