--- a/templates/app/subreddit_list.html
+++ b/templates/app/subreddit_list.html
@@ -2,16 +2,14 @@
 
 {% block content %}
 <a href="{% url 'subreddit_create_view' %}">Create Subreddits</a>
-<h1>Welcome {{request.user }}</h1>
+<h1>Welcome {{request.user }} to Not Quite Reddit</h1>
 <br>
 <h1>Subreddits</h1>
 {% for sub in object_list %}
   <div class="well well-sm">
-    <h4><a href="{% url 'subreddit_detail_view' sub.id %}">{{ sub }} <span class="badge">{{ sub.current_count }}</span></a></h4>
+    <h4><a href="{% url 'subreddit_detail_view' sub.id %}">nqr/{{ sub }} <span class="badge">{{ sub.current_count }}</span></a></h4>
     <h5>{{ sub.description }}</h5>
   </div>
-
 <br>
 {% endfor %}
-
 {% endblock %}
