--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
       <div class="container">
         <div class="anchor_tags">
           <a href="{% url 'subreddit_view' %}">Subreddits</a> <br>
+          <a href="{% url 'user_create_view' %}">New User</a> <br>
             {% if not request.user.is_authenticated %}
               <a href="{% url 'login' %}">Login</a>
             {% else %}
