linked url page

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
       .panel-body {
         padding: 1em;
       }
+
+      a {
+        color: navy;
+      }
     </style>
   </head>
   <body>
