--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<a href="{% url 'post_update_view' object.id %}">Update Post</a><br>
-<a href="{% url 'comment_create_view' object.id %}">Add Comment</a> <br>
-
+{% if request.user.is_authenticated %}
+  {% if request.user == object.user %}
+    <a href="{% url 'post_update_view' object.id %}">Update Post</a><br>
+  {% endif %}
+  <a href="{% url 'comment_create_view' object.id %}">Add Comment</a> <br>
+{% endif %}
 <h1>{{ object }}</h1>
 <h3>{{ object.post_description }}</h3>
   URL: <a href="{{ object.url_page }}">{{ object.url_page }}</a><br>
@@ -12,8 +15,10 @@
 {% for comment in object.get_comment %}
   <div class="well well-sm">
     <li>
-      {{ comment }}<br>
-      <a href="{% url 'comment_update_view' comment.id %}">Update Comment</a> <br>
+      <h3>{{ comment }}</h3><br>
+      {% if request.user == comment.comment_user %}
+        <a href="{% url 'comment_update_view' comment.id %}">Update Comment</a> <br>
+      {% endif %}
       Created {{ comment.comment_created|timesince }} ago.
       Created By: {{ comment.comment_user }} <br> <br>
     </li>
