--- a/templates/app/subreddit_detail.html
+++ b/templates/app/subreddit_detail.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<a href="{% url 'subreddit_update_view' object.id %}">Update Subreddit</a><br>
-<a href="{% url 'post_create_view' object.id %}">Create Post</a>
+{% if request.user.is_authenticated %}
+  <a href="{% url 'subreddit_update_view' object.id %}">Update Subreddit</a><br>
+  <a href="{% url 'post_create_view' object.id %}">Create Post</a>
+{% endif %}
 <h1>{{ object }}</h1>
 <h3>{{ object.description }}</h3> <br>
 {% for post in object.get_recent %}
