--- a/templates/app/subreddit_form.html
+++ b/templates/app/subreddit_form.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Create a New Subreddit</h1>
-<form class="" action="" method="post">
-  {% csrf_token %}
-  {{ form }}
-  <input type="submit" name="" value="Submit">
-</form>
+{% if request.user.is_authenticated %}
+  <h1>Create a New Subreddit</h1>
+  <form class="" action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" name="" value="Submit">
+  </form>
+{% endif %}
 {% endblock %}
