--- a/templates/app/subreddit_list.html
+++ b/templates/app/subreddit_list.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="{% url 'subreddit_create_view' %}">Create Subreddits</a>
+{% if request.user.is_authenticated %}
+  <a href="{% url 'subreddit_create_view' %}">Create Subreddits</a>
+{% endif %}
 <h1>Welcome {{request.user }} to Not Quite Reddit</h1>
 <br>
 <h1>Subreddits</h1>
