--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Not Quite Reddit</h1>
 <br>
-<h2><a href="{% url 'subreddit_view' %}">Enter the Site</a></h2>
+<h1 class="title">Not Quite Reddit</h1>
+<br>
+<h2 class="title"><a href="{% url 'subreddit_view' %}">Enter the Site</a></h2>
 {% endblock %}
