--- a/templates/app/subreddit_list.html
+++ b/templates/app/subreddit_list.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 {% if request.user.is_authenticated %}
-  <a href="{% url 'subreddit_create_view' %}">Create Subreddits</a>
+
 {% endif %}
-<h1>Welcome {{request.user }} to Not Quite Reddit</h1>
+<h1 class="title">Welcome {{request.user }} to Not Quite Reddit</h1>
 <br>
-<h1>Subreddits</h1>
+<h1 id="subreddits">Subreddits</h1> <br>
 {% for sub in object_list %}
   <div class="well well-sm">
     <h4><a href="{% url 'subreddit_detail_view' sub.id %}">nqr/{{ sub }} <span class="badge">{{ sub.current_count }}</span></a></h4>
