styling it back up again

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,20 +11,16 @@
       body {
         background-color: #48D1CC;
       }
-
       a:hover {
         color: black;
       }
-
       h1 {
         position: relative;
         text-decoration: underline;
       }
-
       .panel-body {
         padding: 1em;
       }
-
       a {
         color: navy;
       }
@@ -35,7 +31,10 @@
         text-align: center;
       }
       .title {
-        text-align: center;
+        padding-left: 475px;
+      }
+      .subtitle {
+        padding-left: 280px;
       }
     </style>
   </head>
