--- a/templates/app/subreddit_detail.html
+++ b/templates/app/subreddit_detail.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
 {% if request.user.is_authenticated %}
-  <a href="{% url 'subreddit_update_view' object.id %}">Update Subreddit</a> <br>
-  <a href="{% url 'post_create_view' object.id %}">Create Post</a>
+  <div class="col-md-2">
+    <div class="well well-sm">
+      <a href="{% url 'subreddit_update_view' object.id %}">Update Subreddit</a> <br>
+      <a href="{% url 'post_create_view' object.id %}">Create Post</a>
+    </div>
+  </div>
 {% endif %}
+<br><br>
 <h1 class="title">{{ object }}</h1>
-<h3 class="title">{{ object.description }}</h3> <br>
+<h3 class="subtitle">{{ object.description }}</h3> <br>
 {% for post in object.get_recent %}
   <div class="well well-sm">
-      <li><h4><a href="{% url 'post_detail_view' post.id %}">{{ post }} <span class="badge">{{ post.post_count }}</span></a></h4></li>
+      <h4><a href="{% url 'post_detail_view' post.id %}">{{ post }} <span class="badge">{{ post.post_count }}</span></a></h4>
       Created {{ post.post_created|timesince }} ago.
   </div>
 {% endfor %}
