--- a/templates/app/subreddit_list.html
+++ b/templates/app/subreddit_list.html
@@ -4,7 +4,7 @@
 {% if request.user.is_authenticated %}
 
 {% endif %}
-<h1 class="title">Welcome {{request.user }} to Not Quite Reddit</h1>
+<h1 class="new_title">Welcome {{request.user }} to Not Quite Reddit</h1>
 <br>
 <h1 id="subreddits">Subreddits</h1> <br>
 {% for sub in object_list %}
