--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" media="screen" title="no title">
 
-    
     <style media="screen">
       body {
         background-color: #48D1CC;
@@ -35,7 +34,13 @@
         padding-left: 475px;
       }
       .subtitle {
-        padding-left: 280px;
+        text-align: center;;
+      }
+      .new_title {
+        text-align: center;
+      }
+      .obj_title {
+        text-align: left;;
       }
     </style>
   </head>
