--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <br>
-<h1 class="title">Not Quite Reddit</h1>
+<h1 class="new_title">Not Quite Reddit</h1>
 <br>
 <h2 class="title"><a href="{% url 'subreddit_view' %}">Enter the Site</a></h2>
 {% endblock %}
