--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
 {% if request.user.is_authenticated %}
+<div class="col-md-2">
+  <div class="well well-sm">
   {% if request.user == object.user %}
     <a href="{% url 'post_update_view' object.id %}">Update Post</a><br>
   {% endif %}
   <a href="{% url 'comment_create_view' object.id %}">Add Comment</a> <br>
 {% endif %}
-<h1 class="title">{{ object }}</h1>
-<h3 class="title">{{ object.post_description }}</h3>
-  <div class="title">
+  </div>
+</div>
+<br>
+<h1 class="obj_title">{{ object }}</h1>
+<h3 class="new_title">{{ object.post_description }}</h3>
+  <div class="new_title">
     URL: <a href="{{ object.url_page }}">{{ object.url_page }}</a><br>
     {{ object.is_recent }}<br>
     {{ object.is_hot }}<br><br>
@@ -16,14 +21,12 @@
 
 {% for comment in object.get_comment %}
   <div class="well well-sm">
-    <li>
       <h3>{{ comment }}</h3><br>
       {% if request.user == comment.comment_user %}
         <a href="{% url 'comment_update_view' comment.id %}">Update Comment</a> <br>
       {% endif %}
       Created {{ comment.comment_created|timesince }} ago.
       Created By: {{ comment.comment_user }} <br> <br>
-    </li>
   </div>
 {% endfor %}
 {% endblock %}
